Fixed up getting contacts so there's a picker and it works most of the time. Still only fetching the first phone number, will fix later.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">GraphStuff</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="pick_contact">Pick Contact</string>
 
 </resources>
